# cffi

./: readme.txt
001_simple_example/: add.c  add.h  add.py  build.py  build.scr  clean.scr  run.scr
002_simple_example/: magic.c  magic.h  python_build_magic_tests.py
003_simple_example_debug_python/: clean.scr  magic.c  python_build_magic_tests.py
004_simple_example_debug_c/: build.scr  build_magic_tests.py  magic.h  run.scr
005_multiple_dir/: clean.scr  readme.txt  set_path.scr
005_use_source_file_in_multiple_dir/: .envrc  build.scr  run.scr
005_use_source_file_in_multiple_dir/c/: magic.c
005_use_source_file_in_multiple_dir/cffi/: _magic.c  build_wrapper_magic.py
006_use_so/: .envrc  build.scr  clean.scr  readme.txt  run.scr  set_path.scr
006_use_so/c/: CMakeLists.txt  build.scr  clean.scr
006_use_so/c/include/: do_print.h  magic.h
006_use_so/c/src/: do_print.c  magic.c
006_use_so/cffi/: build_wrapper_magic.py
006_use_so/python/: test_magic.py
